@@ -12,7 +12,6 @@ import springfox.documentation.spi.service.contexts.SecurityContext;
 import springfox.documentation.spring.web.plugins.Docket;
 import springfox.documentation.swagger2.annotations.EnableSwagger2;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -27,7 +26,7 @@ public class SwaggerConfig {
                 .securityContexts(Collections.singletonList(getContext()))
                 .securitySchemes(Collections.singletonList(apiKey()))
                 .select()
-                .apis(RequestHandlerSelectors.basePackage("uz.digitalone.houzingapp"))
+                .apis(RequestHandlerSelectors.basePackage("uz.group.app"))
                 .paths(PathSelectors.any())
                 .build().apiInfo(metadata());
     }
@@ -45,16 +44,16 @@ public class SwaggerConfig {
         AuthorizationScope authorizationScope = new AuthorizationScope("global", "accessEverything");
         AuthorizationScope[] authorizationScopes = new AuthorizationScope[1];
         authorizationScopes[0] = authorizationScope;
-        return Arrays.asList(new SecurityReference("JWT", authorizationScopes));
+        return List.of(new SecurityReference("JWT", authorizationScopes));
     }
 
     private ApiInfo metadata() {
-        return new ApiInfoBuilder().title("API Endpoints for Houzing Web App")
-                .description("This project is a real estate e-commerce website")
+        return new ApiInfoBuilder().title("Web App")
+                .description("This project is a real website")
                 .license("Apache version 2.0")
                 .version("1.1.0")
                 .licenseUrl("https://www.apache.org/licenses/LICENSE-2.0.html")
-                .contact(new Contact("Digital One", "www.digitalone.uz", "gm.khamza@gmail.com"))
+                .contact(new Contact("Digital One", "www.group.uz", "azizovmuhammaduz@gmail.com"))
                 .build();
     }
 }
